// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataTable Default 1`] = `
<div
  className="sc-hAZoDl cYjtgu"
>
  <header
    className="sc-fnykZs fSnpPb"
  >
    <h3
      className="sc-fEOsli dkiKWU"
    >
      This is a title
    </h3>
  </header>
  <table
    className="sc-dIouRR kEpdpq"
  >
    <tbody>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle 1`] = `
<div
  className="sc-hAZoDl cYjtgu"
>
  <header
    className="sc-fnykZs fSnpPb"
  >
    <h3
      className="sc-fEOsli dkiKWU"
    >
      This is a title
    </h3>
    <h4
      className="sc-bjUoiL kKVZit"
    >
      Subtitle
    </h4>
  </header>
  <table
    className="sc-dIouRR kEpdpq"
  >
    <tbody>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle And Children 1`] = `
<div
  className="sc-hAZoDl cYjtgu"
>
  <header
    className="sc-fnykZs fSnpPb"
  >
    <h3
      className="sc-fEOsli dkiKWU"
    >
      This is a title
    </h3>
    <h4
      className="sc-bjUoiL kKVZit"
    >
      Subtitle
    </h4>
    <div
      className="sc-idiyUo mUiju"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-dIouRR kEpdpq"
  >
    <tbody>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable Without Subtitle And With Children 1`] = `
<div
  className="sc-hAZoDl cYjtgu"
>
  <header
    className="sc-fnykZs fSnpPb"
  >
    <h3
      className="sc-fEOsli dkiKWU"
    >
      This is a title
    </h3>
    <div
      className="sc-idiyUo mUiju"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-dIouRR kEpdpq"
  >
    <tbody>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-hHLeRK eLJHRA"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
